--- a/site/bower.json
+++ b/site/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "VC_Dashboard",
   "private": true,
+  "version": "0.3.2",
   "dependencies": {
     "bootstrap": "3.0.0",
     "bootstrap-touch-carousel": "0.8.0",
@@ -21,7 +22,6 @@
   "keywords": [
     "vaccine"
   ],
-  "license": "MIT",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -31,5 +31,9 @@
   ],
   "devDependencies": {
     "angular": "angularjs#^1.5.0"
+    "angular-mocks": "~1.5",
+    "bootstrap": "~3.1",
+    "angular-bootstrap": "~0.10.0",
+    "angular-ui-router": "~0.2"
   }
 }
