--- a/site/bower.json
+++ b/site/bower.json
@@ -30,7 +30,7 @@
     "tests"
   ],
   "devDependencies": {
-    "angular": "angularjs#^1.5.0"
+    "angular": "angularjs#^1.5.0",
     "angular-mocks": "~1.5",
     "bootstrap": "~3.1",
     "angular-bootstrap": "~0.10.0",
