--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
-*.DS_Store
-.sass-cache
-node_modules/
-dist/
-site/src/components/
-/node_modules
-site/src/app/**/*.js.map
-.env
 *.sw*
 *~
-site/build/
-site/bin/
-site/node_modules/
-site/vendor/
+build/
+bin/
+node_modules/
+vendor/
