--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "select2": "~4.0.1",
     "jsrender": "~0.9.71",
     "multiple-select": "~1.2.1",
-    "datatables-fixedheader": "~3.1.1"
+    "datatables-fixedheader": "~3.1.1",
+    "angular-nvd3": "^1.0.6"
   },
   "resolutions": {
     "jquery": "1.9",
