--- a/bower.json
+++ b/bower.json
@@ -36,10 +36,11 @@
     "jsrender": "~0.9.71",
     "multiple-select": "~1.2.1",
     "datatables-fixedheader": "~3.1.1",
-    "angular-nvd3": "^1.0.6"
+    "angular-nvd3": "^1.0.6",
+    "angular-datatables": "^0.5.4"
   },
   "resolutions": {
-    "jquery": "1.9",
+    "jquery": ">=1.7.0",
     "angular": "1.4.8",
     "d3": "^3.5.16"
   }
