--- a/bower.json
+++ b/bower.json
@@ -46,6 +46,7 @@
     "leaflet": "0.7.x"
   },
   "devDependencies": {
-    "leaflet": "^1.0.1"
+    "leaflet": "^1.0.1",
+    "angular-leaflet-directive": "^0.10.0"
   }
 }
