--- a/bower.json
+++ b/bower.json
@@ -37,7 +37,9 @@
     "multiple-select": "~1.2.1",
     "datatables-fixedheader": "~3.1.1",
     "angular-nvd3": "^1.0.6",
-    "angular-datatables": "^0.5.4"
+    "angular-datatables": "^0.5.4",
+    "html2canvas": "^0.4.1",
+    "jspdf": "^1.3.5"
   },
   "resolutions": {
     "jquery": ">=1.7.0",
