--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Order Quality Tool and Dashboard, to connect to DHIS2 data",
   "main": "index.js",
   "scripts": {
-    "test": "karma start"
+    "test": "karma start",
+    "build": "browserify browser.js -o static/bundle.js",
+    "watch": "watchify browser.js -o static/bundle.js --debug --verbose"
   },
   "repository": {
     "type": "git",
@@ -17,15 +19,24 @@
   },
   "homepage": "https://github.com/CHAIUganda/vc_dashboard#readme",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-without-strict": "0.0.4",
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
     "eslint-loader": "^1.2.1",
     "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-less": "^3.0.5",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-bg": "0.0.7",
+    "gulp-concat": "^2.6.1",
+    "gulp-less": "^3.3.2",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-nightwatch": "^0.2.9",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
     "gulp-watch-less": "^1.0.1",
     "gulp-webpack": "^1.5.0",
     "jasmine": "^2.3.2",
@@ -40,8 +51,6 @@
     "webpack": "^1.12.13"
   },
   "dependencies": {
-    "gulp-bg": "0.0.7",
-    "gulp-webpack": "^1.5.0",
     "webpack": "^1.12.12"
   }
 }
