--- a/bower.json
+++ b/bower.json
@@ -41,7 +41,8 @@
     "html2canvas": "^0.4.1",
     "jspdf": "^1.3.5",
     "canvg": "^1.3.0",
-    "rgbcolor": "^1.0.1"
+    "rgbcolor": "^1.0.1",
+    "angular-ui-grid": "^4.0.10"
   },
   "resolutions": {
     "jquery": ">=1.7.0",
