--- a/bower.json
+++ b/bower.json
@@ -42,7 +42,8 @@
     "jspdf": "^1.3.5",
     "canvg": "^1.3.0",
     "rgbcolor": "^1.0.1",
-    "angular-ui-grid": "^4.0.10"
+    "angular-ui-grid": "^4.0.10",
+    "humanize-plus": "^1.8.2"
   },
   "resolutions": {
     "jquery": ">=1.7.0",
