Feature: Coverage Data parser for new DHIS2
- New parser to parse data from new DHIS2 endpoint for 2020.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,13 @@ vaccines:
   volumes:
     - /data/assets:/usr/src/app/asset_files
     - /data/tmp:/usr/src/app/tmp
+    - .:/usr/src/app
   links:
     - redis:redis
     - postgres:postgres
   env_file: .env
+  environment:
+    - PYTHONUNBUFFERED=1
   command: /usr/local/bin/gunicorn vaccines.wsgi:application -w 2 -b :9000
 
 postgres:
